--- a/Wdevs/CustomBar/view/frontend/layout/default.xml
+++ b/Wdevs/CustomBar/view/frontend/layout/default.xml
@@ -2,7 +2,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="page.wrapper">
-            <block class="Magento\Framework\View\Element\Template" name="custom_bar" before="-" template="Wdevs_CustomBar::custom_bar.phtml" />
+            <block class="Magento\Framework\View\Element\Template" name="custom_bar" ifconfig="custom_bar/general/enabled" before="-" template="Wdevs_CustomBar::custom_bar.phtml" />
         </referenceContainer>
     </body>
 </page>
